OPENSEARCH-DASHBOARDS/opensearch-dashboards-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: opensearch
spec:
  selector:
    app: opensearch-dashboards
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  type: ClusterIP
