OPENSEARCH-DASHBOARDS/opensearch-dashboards-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-dashboards-ingress
  namespace: opensearch
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`opensearch.<valid_domain>`)
      kind: Rule
      services:
        - name: opensearch-dashboards
          port: 5601
  tls:
    secretName: opensearch-secret
